Fix CORS for GitHub Pages